2011-11-23  Kaz Kylheku  <kaz@kylheku.com>

	Semantics change. If a variable is followed by a mixture
	of text and regular expressions, that whole mixture is
	considered to follow the variable and used for matching.

	The earlier semantics change whereby a single unescaped
	space denotes the regular expression / +/ broke the
	simple case   @a word.   It caused the @a to be followed
	not by the text " word"  but by just the regular expression
	element.

	With this change @a word means that a is followed by 
	the regex / +/ and "word".

	* match.c (text_s): New symbol variable.
	(h_text): New function.
	(syms_init): Initialize new symbol variable.
	(dir_tables_init): Hook h_text into horizontal directives table.

	* match.h (text_s): Declared.

	* parser.y (text, texts): New nonterminals.
	(elem): TEXT, SPACE and regex are now handled under texts
	grammar production. All texts are run together and produce
	an item which looks like (text items ...).

	* txr.1, RELNOTES: Updated.

	* txr.c (remove_hash_bang_line): Updated to find #! buried
	in (text ...) syntax.

2011-11-22  Kaz Kylheku  <kaz@kylheku.com>

	* configure: Fix environ test case for C++.

2011-11-22  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (search_form): Bugfix: we must search to one character
	position after the end of the line, otherwise we can never match
	@(eol).
	(h_eol): Bugfix: do not return t, but the line length.

	* txr.1: Warn users about @var@(bind ...) pitfall.

	* RELNOTES: Updated.

2011-11-20  Kaz Kylheku  <kaz@kylheku.com>

	Version 042

	* txr.c (version): Bumped.

	* txr.1: Bumped version and set date.

	* configure (txr_ver): Bumped.

2011-11-20  Kaz Kylheku  <kaz@kylheku.com>

	* parser.y (char_from_name): const on wchar_t *.

2011-11-20  Kaz Kylheku  <kaz@kylheku.com>

	Bug #34630

	* parser.y (repeat_clause, rep_elem): Allow empty body.
	(yybadtoken): Handle unexpected newline with different message.

	* RELNOTES: Updated.

2011-11-20  Kaz Kylheku  <kaz@kylheku.com>
