@@ -1,5 +1,15 @@
 2011-11-23  Kaz Kylheku  <kaz@kylheku.com>
 
+	* lib.c (plus, minus): Fixed wrong assertion which would incorrectly
+	fire for inputs that do not overflow.
+
+	* match.c (search_form): Fixed incorrect loop test which could
+	lead to nonterminating behavior.
+
+	* RELNOTES: Updated.
+
+2011-11-23  Kaz Kylheku  <kaz@kylheku.com>
+
 	Semantics change. If a variable is followed by a mixture
 	of text and regular expressions, that whole mixture is
 	considered to follow the variable and used for matching.
